Fix: allow clusters to be collapsed/opened by clicking the triangle icon.

--- a/css/raster.css
+++ b/css/raster.css
@@ -1025,6 +1025,12 @@ for checklists and threat evaluations.
 	right: 20px;
 	top: 0;
 }
+
+.clustericon {
+	float:left;
+	margin-left: -8px;
+	margin-right: 2px;
+}
 /* * * * * * * * * * * * * * * * *+-------------------------+* * * * * * * * * * * * * * * * */
 /* * * * * * * * * * * * * * * * *|         ANALYSIS        |* * * * * * * * * * * * * * * * */
 /* * * * * * * * * * * * * * * * *+-------------------------+* * * * * * * * * * * * * * * * */
